# ChangeLog for app-accessibility/speechd
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speechd/ChangeLog,v 1.8 2004/06/24 21:24:04 agriffis Exp $

  14 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
  speechd-0.56-r1.ebuild:
  Stable amd64.

  20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  speechd-0.56-r1.ebuild:
  Stable x86.

  24 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> speechd-0.56.ebuild:
  Added IUSE.

  18 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> speechd-0.56.ebuild:
  Removed postrm.

  16 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  speechd-0.56-r1.ebuild, speechd-0.56.ebuild:
  festival is now in app-accessibility.

  16 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> metadata.xml,
  speechd-0.56-r1.ebuild, speechd-0.56.ebuild, files/speechd.rc:
  Moved from media-sound/speechd to app-accessibility/speechd.

  14 Mar 2004; David Holm <dholm@gentoo.org> speechd-0.56-r1.ebuild:
  Added to ~ppc.

*speechd-0.56-r1 (13 Mar 2004)

  13 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  speechd-0.56-r1.ebuild, files/speechd.rc:
  Added init script.  Closes bug #43374.

  18 Feb 2004; <augustus@gentoo.org> speechd-0.56.ebuild:
  Added amd64 to keywords. Works great with festival. Made stable as it's the
  only version available.

  07 Dec 2003; Michael Sterrett <mr_bones_@gentoo.org> speechd-0.56.ebuild:
  chown x.y -> chown x:y (bug 35127)

*speechd-0.56 (14 Jul 2002)

  13 Jul 2002; Michael Nazaroff <naz@gentoo.org> speechd-0.56:

  Initial import.
  ebuild submitted by Matt Keadle <mkeadle@ecpi.edu>
