@@ -1,7 +1,7 @@
-MD5 cedd40d448110b0813ba8601218545be speechd-0.56.ebuild 1370
-MD5 6524a749ed6c0542c8d11aa7d8590bf5 speechd-0.56-r1.ebuild 1506
-MD5 6739c0aa2036084391517e8d51c7ed86 ChangeLog 1662
+MD5 623133af78c9aea8a59f8095d7eb8e44 ChangeLog 1800
 MD5 4f5d797c455932135181f0c31b5e71b2 metadata.xml 185
-MD5 bc0a2d35e9d4d817f657a8aad30d3a14 files/digest-speechd-0.56-r1 63
+MD5 e1fe24e435e557100e732fcf12b229aa speechd-0.56-r1.ebuild 1191
+MD5 cedd40d448110b0813ba8601218545be speechd-0.56.ebuild 1370
 MD5 bc0a2d35e9d4d817f657a8aad30d3a14 files/digest-speechd-0.56 63
+MD5 bc0a2d35e9d4d817f657a8aad30d3a14 files/digest-speechd-0.56-r1 63
 MD5 c4de075c04f81e0417cc8fbffe0467b3 files/speechd.rc 501
