@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speechd/speechd-0.56-r1.ebuild,v 1.7 2004/06/24 21:24:04 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speechd/speechd-0.56-r1.ebuild,v 1.8 2004/07/22 11:35:25 eradicator Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.speechio.org/dl/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ~ppc amd64"
+KEYWORDS="x86 ~ppc amd64 ~sparc"
 IUSE="esd"
 
 DEPEND="dev-lang/perl"
@@ -38,18 +38,8 @@ src_install() {
 pkg_postinst() {
 	enewgroup speech
 
-	einfo "Execute ebuild /var/db/pkg/${CATEGORY}/${PF}/${PF}.ebuild config"
-	einfo "to build the neccessary FIFO on /dev/speech."
-}
-
-pkg_config() {
 	mkfifo --mode=0660 /dev/speech
 	chown root:speech /dev/speech
-
-	einfo "FIFO has been created on /dev/speech"
-	einfo ""
-	einfo "In order for non-root users to take advantage of /dev/speech"
-	einfo "they must be added to the 'speech' group."
 }
 
 # This would get executed on an upgrade...
